Ensure that long math equations aren't cut off

--- a/scss/_sphinx_base.scss
+++ b/scss/_sphinx_base.scss
@@ -559,6 +559,10 @@ article.pytorch-article {
       }
     }
   }
+
+  table {
+    table-layout: fixed;
+  }
 }
 
 .pytorch-article {
